[project]
name = "smart-sampler-api"
version = "1.0.0"
requires-python = ">=3.10,<3.11"
dependencies = [
  "robyn",  # Latest available version
  "librosa>=0.10.2",
  "soundfile",
  "python-multipart",
  "python-dotenv",
  "deepgram-sdk>=3.5.0",
  "madmom>=0.16.1",
  "numpy<2.0",
  "scipy",
  "setuptools"  # Required by madmom for pkg_resources
]

[tool.uv.extra-build-dependencies]
madmom = ["Cython", "numpy"]

[dependency-groups]
dev = [
    "ruff",
]